# dependency-scan

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
scripts/: hfw_report.py
scripts/github_action/: extract_manifests.py  resolve_manifests.py  validate_commit_subjects.py  validate_inputs.py
tests/: test_github_action_validate_inputs.py  test_hfw_report.py  test_release_workflows.py  test_validate_commit_subjects.py
