[project]
name = "dependency-scan"
version = "0.1.0"
description = "Public GitHub Action for Hacktron dependency scans."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Hacktron" },
]
dependencies = []

[dependency-groups]
dev = [
  "pre-commit==4.5.1",
  "pytest==9.0.3",
  "pyyaml==6.0.3",
  "ruff==0.14.9",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
